@@ -1,17 +1,27 @@
 2011-01-14 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/tree_dec.hh,
+	  src/z80/ralloc2.cc:
+	  Added GPLv2 or later license text.
+
+2011-01-14 Philipp Klaus Krause <pkk AT spth.de>
+
 	* src/z80/ralloc.c:
 	  Remove some no longer used remains of the old register allocator.
 
 2011-01-14 Philipp Klaus Krause <pkk AT spth.de>
+
 	* src/z80/main.c:
 	  Enable new register allocator options for the GBZ80.
 
 2011-01-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
 	* src/z80/ralloc.c,
 	  src/z80/ralloc2.cc:
 	  Use new register allocator for the GBZ80.
 
 2011-01-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
 	* configure,
 	  configure.in,
 	  src/Makefile.in,
